# rinha-de-backend-2026-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yaml  railway.json
.github/workflows/: ci.yml
docs/adr/: 0001-exact-knn-baseline.md  0002-publish-under-mit-license.md
docs/architecture/: overview.md
docs/examples/: legit-request.json
docs/verification/: vectorization-invariant-proof.md  vectorization-proof.md
ops/nginx/: nginx.conf
resources/: example-references.json
scripts/: fetch-official-resources.sh
src/: api.rs  config.rs  engine.rs  lib.rs  main.rs  model.rs
tests/: http_api.rs  vector_contract.rs
